Initial Commit to create LogLocked Plugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=LogLocked
+author=MrNice98
+description=Allows players to unlock collections log sections based on total log slots filled. (10 slots = 1 section unlock)
+tags=LogLocked,Dabe,ColLog
+plugins=com.example.LogLocked
